@@ -16,14 +16,24 @@ import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.ccd.client.model.SubmittedCallbackResponse;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 import uk.gov.hmcts.reform.prl.config.launchdarkly.LaunchDarklyClient;
+import uk.gov.hmcts.reform.prl.enums.ChildAbuseEnum;
 import uk.gov.hmcts.reform.prl.enums.Gender;
 import uk.gov.hmcts.reform.prl.enums.PartyEnum;
 import uk.gov.hmcts.reform.prl.enums.TypeOfAbuseEnum;
 import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
 import uk.gov.hmcts.reform.prl.enums.YesNoIDontKnow;
 import uk.gov.hmcts.reform.prl.enums.YesOrNo;
+import uk.gov.hmcts.reform.prl.enums.citizen.AttendingToCourtEnum;
 import uk.gov.hmcts.reform.prl.enums.citizen.ConfidentialityListEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.CourtComfortEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.CourtHearingEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.DocsSupportEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.HelpCommunicationEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.LanguageRequirementsEnum;
 import uk.gov.hmcts.reform.prl.enums.citizen.ReasonableAdjustmentsEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.SafetyArrangementsEnum;
+import uk.gov.hmcts.reform.prl.enums.citizen.TravellingToCourtEnum;
+import uk.gov.hmcts.reform.prl.enums.managedocuments.DocumentPartyEnum;
 import uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole;
 import uk.gov.hmcts.reform.prl.enums.respondentsolicitor.RespondentWelshNeedsListEnum;
 import uk.gov.hmcts.reform.prl.exception.RespondentSolicitorException;
@@ -34,9 +44,10 @@ import uk.gov.hmcts.reform.prl.models.DxAddress;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.Organisation;
 import uk.gov.hmcts.reform.prl.models.Organisations;
-import uk.gov.hmcts.reform.prl.models.caseaccess.CaseUser;
+import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicList;
 import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
+import uk.gov.hmcts.reform.prl.models.complextypes.QuarantineLegalDoc;
 import uk.gov.hmcts.reform.prl.models.complextypes.RespChildAbuse;
 import uk.gov.hmcts.reform.prl.models.complextypes.RespDomesticAbuseBehaviours;
 import uk.gov.hmcts.reform.prl.models.complextypes.applicationtab.Respondent;
@@ -50,8 +61,8 @@ import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.confidential
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.consent.Consent;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.internationalelements.CitizenInternationalElements;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.miam.Miam;
+import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.proceedings.CurrentOrPreviousProceedings;
 import uk.gov.hmcts.reform.prl.models.complextypes.citizen.response.supportyouneed.ReasonableAdjustmentsSupport;
-import uk.gov.hmcts.reform.prl.models.complextypes.respondentsolicitor.documents.RespondentDocs;
 import uk.gov.hmcts.reform.prl.models.complextypes.solicitorresponse.AttendToCourt;
 import uk.gov.hmcts.reform.prl.models.complextypes.solicitorresponse.RespondentAllegationsOfHarmData;
 import uk.gov.hmcts.reform.prl.models.complextypes.solicitorresponse.RespondentInterpreterNeeds;
@@ -60,8 +71,13 @@ import uk.gov.hmcts.reform.prl.models.complextypes.solicitorresponse.ResponseToA
 import uk.gov.hmcts.reform.prl.models.documents.Document;
 import uk.gov.hmcts.reform.prl.models.dto.GeneratedDocumentInfo;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.RespChildAbuseBehaviour;
+import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.c100respondentsolicitor.RespondentSolicitorData;
+import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
 import uk.gov.hmcts.reform.prl.services.ApplicationsTabService;
+import uk.gov.hmcts.reform.prl.services.DocumentLanguageService;
 import uk.gov.hmcts.reform.prl.services.OrganisationService;
 import uk.gov.hmcts.reform.prl.services.RespondentAllegationOfHarmService;
 import uk.gov.hmcts.reform.prl.services.SystemUserService;
@@ -70,7 +86,10 @@ import uk.gov.hmcts.reform.prl.services.c100respondentsolicitor.validators.Respo
 import uk.gov.hmcts.reform.prl.services.caseaccess.CcdDataStoreService;
 import uk.gov.hmcts.reform.prl.services.document.DocumentGenService;
 import uk.gov.hmcts.reform.prl.services.managedocuments.ManageDocumentsService;
+import uk.gov.hmcts.reform.prl.services.reviewdocument.ReviewDocumentService;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -87,21 +106,29 @@ import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doCallRealMethod;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.HYPHEN_SEPARATOR;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGAL_PROFESSIONAL;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_C1A_DRAFT_DOCUMENT;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_C7_DRAFT_DOCUMENT;
 import static uk.gov.hmcts.reform.prl.enums.YesOrNo.No;
 import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
 import static uk.gov.hmcts.reform.prl.services.c100respondentsolicitor.C100RespondentSolicitorService.RESPONSE_ALREADY_SUBMITTED_ERROR;
 import static uk.gov.hmcts.reform.prl.services.c100respondentsolicitor.C100RespondentSolicitorService.TECH_ERROR;
+import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @RunWith(MockitoJUnitRunner.Silent.class)
 public class C100RespondentSolicitorServiceTest {
 
     @InjectMocks
     C100RespondentSolicitorService respondentSolicitorService;
+
+    @Mock
+    ReviewDocumentService reviewDocumentService;
 
     CaseData caseData;
 
@@ -127,6 +154,9 @@ public class C100RespondentSolicitorServiceTest {
 
     @Mock
     ResponseSubmitChecker responseSubmitChecker;
+
+    @Mock
+    DocumentLanguageService documentLanguageService;
 
     @Mock
     RespondentSolicitorMiamService miamService;
@@ -172,8 +202,23 @@ public class C100RespondentSolicitorServiceTest {
 
     CallbackRequest callbackRequest2;
 
+    QuarantineLegalDoc quarantineLegalDoc;
+
+    Document document;
+
     @Before
     public void setUp() {
+
+        document = Document.builder()
+            .documentFileName("test.pdf")
+            .documentUrl("http://dm-store.com/documents/7ab2e6e0-c1f3-49d0-a09d-771ab99a2f15")
+            .build();
+
+        quarantineLegalDoc = QuarantineLegalDoc.builder()
+            .documentParty(DocumentPartyEnum.APPLICANT.getDisplayedValue())
+            .categoryId("respondentC1AApplication")
+            .documentUploadedDate(LocalDateTime.now())
+            .build();
 
         RespDomesticAbuseBehaviours domesticAbuseBehaviours = RespDomesticAbuseBehaviours.builder()
                 .respTypeOfAbuse(TypeOfAbuseEnum.TypeOfAbuseEnum_value_1)
@@ -287,6 +332,7 @@ public class C100RespondentSolicitorServiceTest {
                 .email("abc@xyz.com")
                 .phoneNumber("1234567890")
                 .response(Response.builder()
+                    .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
                         .citizenDetails(CitizenDetails.builder()
                                 .firstName("test")
                                 .lastName("test")
@@ -296,6 +342,7 @@ public class C100RespondentSolicitorServiceTest {
                         .c7ResponseSubmitted(No)
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
+                            .permissionFromCourt(No)
                                 .noConsentReason("test")
                                 .build())
                         .keepDetailsPrivate(KeepDetailsPrivate
@@ -323,6 +370,11 @@ public class C100RespondentSolicitorServiceTest {
                         .supportYouNeed(ReasonableAdjustmentsSupport.builder()
                                 .reasonableAdjustments(List.of(ReasonableAdjustmentsEnum.nosupport)).build())
                         .responseToAllegationsOfHarm(responseToAllegationsOfHarm)
+                        .consent(Consent.builder()
+                                     .permissionFromCourt(Yes)
+                                     .consentToTheApplication(Yes)
+                                     .build())
+                        .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
                         .build())
                 .canYouProvideEmailAddress(Yes)
                 .isEmailAddressConfidential(No)
@@ -352,6 +404,7 @@ public class C100RespondentSolicitorServiceTest {
                 .sendSignUpLink("test")
                 .phoneNumber("1234567890")
                 .response(Response.builder()
+                        .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
                         .citizenDetails(CitizenDetails.builder()
                                 .firstName("test")
                                 .lastName("test")
@@ -359,6 +412,7 @@ public class C100RespondentSolicitorServiceTest {
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
                                 .noConsentReason("test")
+                                .permissionFromCourt(Yes)
                                 .build())
                         .c7ResponseSubmitted(No)
                         .keepDetailsPrivate(KeepDetailsPrivate
@@ -405,12 +459,6 @@ public class C100RespondentSolicitorServiceTest {
         List<PartyEnum> party = new ArrayList<>();
         party.add(PartyEnum.respondent);
 
-        List<CaseUser> caseUserList = new ArrayList<>();
-        caseUserList.add(CaseUser.builder()
-                .caseId("12345")
-                .caseRole("[C100RESPONDENTSOLICITOR1]")
-                .userId("1afdfa01-8280-4e2c-b810-ab7cf741988a").build());
-
         Address address = Address.builder()
                 .addressLine1("test")
                 .postCode("test")
@@ -422,8 +470,6 @@ public class C100RespondentSolicitorServiceTest {
                 .build();
         Element<RespondentInterpreterNeeds> wrappedInterpreter = Element.<RespondentInterpreterNeeds>builder()
                 .value(interpreterNeeds).build();
-        DynamicListElement dynamicListElement = DynamicListElement
-                .builder().code("1afdfa01-8280-4e2c-b810-ab7cf741988a").build();
         Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
                 .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
                 .value(respondent).build();
@@ -440,12 +486,10 @@ public class C100RespondentSolicitorServiceTest {
         List<Element<RespondentInterpreterNeeds>> interpreterList = Collections.singletonList(wrappedInterpreter);
         Element<Address> wrappedAddress = Element.<Address>builder().value(address).build();
         List<Element<Address>> addressList = Collections.singletonList(wrappedAddress);
-        RespondentDocs respondentDocs = RespondentDocs.builder().build();
-        Element<RespondentDocs> respondentDocsElement = Element.<RespondentDocs>builder().value(respondentDocs).build();
-        List<Element<RespondentDocs>> respondentDocsList = new ArrayList<>();
-        respondentDocsList.add(respondentDocsElement);
         caseData = CaseData.builder().respondents(respondentList).id(1)
                 .caseTypeOfApplication(C100_CASE_TYPE)
+                .courtSeal("courtSeal")
+                .taskListVersion("v3")
                 .respondentSolicitorData(RespondentSolicitorData.builder()
                         .respondentAllegationsOfHarmData(allegationsOfHarmData)
                         .keepContactDetailsPrivate(KeepDetailsPrivate.builder()
@@ -555,6 +599,7 @@ public class C100RespondentSolicitorServiceTest {
                 .email("abc@xyz.com")
                 .phoneNumber("1234567890")
                 .response(Response.builder()
+                    .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
                         .citizenDetails(CitizenDetails.builder()
                                 .firstName(null)
                                 .lastName(null)
@@ -564,6 +609,7 @@ public class C100RespondentSolicitorServiceTest {
                         .c7ResponseSubmitted(No)
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
+                            .permissionFromCourt(No)
                                 .noConsentReason("test")
                                 .build())
                         .keepDetailsPrivate(KeepDetailsPrivate
@@ -619,6 +665,7 @@ public class C100RespondentSolicitorServiceTest {
                 .email("abc@xyz.com")
                 .phoneNumber("1234567890")
                 .response(Response.builder()
+                    .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
                         .citizenDetails(CitizenDetails.builder()
                                 .firstName(null)
                                 .lastName(null)
@@ -629,6 +676,7 @@ public class C100RespondentSolicitorServiceTest {
                                 .build())
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
+                            .permissionFromCourt(No)
                                 .noConsentReason("test")
                                 .build())
                         .c7ResponseSubmitted(No)
@@ -673,14 +721,6 @@ public class C100RespondentSolicitorServiceTest {
 
         List<RespondentWelshNeedsListEnum> welshNeedsListEnum2 = new ArrayList<>();
         welshNeedsListEnum2.add(RespondentWelshNeedsListEnum.speakWelsh);
-        List<PartyEnum> party2 = new ArrayList<>();
-        party2.add(PartyEnum.respondent);
-
-        List<CaseUser> caseUserList2 = new ArrayList<>();
-        caseUserList2.add(CaseUser.builder()
-                .caseId("12345")
-                .caseRole("[C100RESPONDENTSOLICITOR1]")
-                .userId("1afdfa01-8280-4e2c-b810-ab7cf741988a").build());
 
         Address address2 = Address.builder()
                 .addressLine1("test")
@@ -709,10 +749,6 @@ public class C100RespondentSolicitorServiceTest {
         List<Element<RespondentInterpreterNeeds>> interpreterList2 = Collections.singletonList(wrappedInterpreter2);
         Element<Address> wrappedAddress2 = Element.<Address>builder().value(address2).build();
         List<Element<Address>> addressList2 = Collections.singletonList(wrappedAddress2);
-        RespondentDocs respondentDocs2 = RespondentDocs.builder().build();
-        Element<RespondentDocs> respondentDocsElement2 = Element.<RespondentDocs>builder().value(respondentDocs2).build();
-        List<Element<RespondentDocs>> respondentDocsList2 = new ArrayList<>();
-        respondentDocsList2.add(respondentDocsElement2);
         caseData2 = CaseData.builder().respondents(respondentList2).id(1)
                 .caseTypeOfApplication(C100_CASE_TYPE)
                 .respondentSolicitorData(RespondentSolicitorData.builder()
@@ -810,6 +846,11 @@ public class C100RespondentSolicitorServiceTest {
 
         when(objectMapper.convertValue(eq(allegationsOfHarmData),
                 Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
+
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
+        when(documentLanguageService.docGenerateLang(
+            Mockito.any(CaseData.class)
+        )).thenReturn(documentLanguage);
     }
 
     @Test
@@ -838,7 +879,6 @@ public class C100RespondentSolicitorServiceTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(objectMapper.convertValue(Mockito.<RespondentAllegationsOfHarmData>any(),
                 Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
-        List<String> errorList = new ArrayList<>();
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                 .CallbackRequest.builder()
                 .eventId("c100ResSolCurrentOrPreviousProceedings")
@@ -860,7 +900,7 @@ public class C100RespondentSolicitorServiceTest {
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(mandatoryFinished);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(mandatoryFinished);
 
         Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
                 .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
@@ -872,19 +912,63 @@ public class C100RespondentSolicitorServiceTest {
                 .respondents(List.of(wrappedRespondents, wrappedRespondents))
                 .build();
 
+        when(documentLanguageService.docGenerateLang(any())).thenReturn(DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build());
+
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
-                .CallbackRequest.builder()
-                .eventId("c100ResSolConsentingToApplicationA")
-                .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
-                        .id(123L)
-                        .data(stringObjectMap)
-                        .build())
-                .build();
+            .CallbackRequest.builder()
+            .eventId("c100ResSolConsentingToApplicationA")
+            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                             .id(123L)
+                             .data(stringObjectMap)
+                             .build())
+            .build();
+
+        List<String> errorList = new ArrayList<>();
+
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(false).isGenWelsh(true).build();
+        when(documentLanguageService.docGenerateLang(
+            Mockito.any(CaseData.class)
+        )).thenReturn(documentLanguage);
+
+        Map<String, Object> response = respondentSolicitorService.validateActiveRespondentResponse(
+            callbackRequest, errorList, authToken
+        );
+
+        assertTrue(response.containsKey("respondents"));
+    }
+
+    @Test
+    public void validateActiveRespondentResponseWelsh() throws Exception {
+        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
+
+        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(mandatoryFinished);
+
+        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
+            .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+            .value(respondent).build();
+        caseData = caseData.toBuilder()
+            .respondentSolicitorData(RespondentSolicitorData.builder()
+                                         .respondentAllegationsOfHarmData(allegationsOfHarmData)
+                                         .build())
+            .respondents(List.of(wrappedRespondents, wrappedRespondents))
+            .build();
+
+        when(documentLanguageService.docGenerateLang(any())).thenReturn(DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build());
+
+        CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
+            .CallbackRequest.builder()
+            .eventId("c100ResSolConsentingToApplicationA")
+            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                             .id(123L)
+                             .data(stringObjectMap)
+                             .build())
+            .build();
 
         List<String> errorList = new ArrayList<>();
 
         Map<String, Object> response = respondentSolicitorService.validateActiveRespondentResponse(
-                callbackRequest, errorList, authToken
+            callbackRequest, errorList, authToken
         );
 
         assertTrue(response.containsKey("respondents"));
@@ -899,7 +983,7 @@ public class C100RespondentSolicitorServiceTest {
                 .build();
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(mandatoryFinished);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(mandatoryFinished);
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                 .CallbackRequest.builder()
                 .eventId("c100ResSolConsentingToApplicationA")
@@ -910,6 +994,11 @@ public class C100RespondentSolicitorServiceTest {
                 .build();
 
         List<String> errorList = new ArrayList<>();
+
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+        when(documentLanguageService.docGenerateLang(
+            Mockito.any(CaseData.class)
+        )).thenReturn(documentLanguage);
 
         Map<String, Object> response = respondentSolicitorService.validateActiveRespondentResponse(
                 callbackRequest, errorList, authToken
@@ -929,7 +1018,9 @@ public class C100RespondentSolicitorServiceTest {
                 .build()).build();
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(responseSubmitChecker.isFinished(Mockito.any())).thenReturn(true);
+        when(responseSubmitChecker.isFinished(Mockito.any(), Mockito.anyBoolean())).thenReturn(true);
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+        when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
 
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                 .CallbackRequest.builder()
@@ -978,6 +1069,9 @@ public class C100RespondentSolicitorServiceTest {
                 .documentCreatedOn(new Date())
                 .build();
 
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+        when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
+
         when(documentGenService.generateSingleDocument(
                 Mockito.anyString(),
                 Mockito.any(CaseData.class),
@@ -986,20 +1080,76 @@ public class C100RespondentSolicitorServiceTest {
                 Mockito.any(HashMap.class)
         )).thenReturn(document2);
         UserDetails userDetails = UserDetails.builder().forename("test")
-                .roles(Arrays.asList("caseworker-privatelaw-solicitor")).build();
+                .roles(List.of("caseworker-privatelaw-solicitor")).build();
+
+        when(documentLanguageService.docGenerateLang(
+            Mockito.any(CaseData.class)
+        )).thenReturn(documentLanguage);
 
         when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
 
         callbackRequest.setEventId("c100ResSolConsentingToApplicationA");
         when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(false);
 
-        List<String> errorList = new ArrayList<>();
         Map<String, Object> response = respondentSolicitorService.submitC7ResponseForActiveRespondent(
                 authToken, callbackRequest
         );
         Assertions.assertTrue(response.containsKey("respondentAc8"));
     }
 
+    @Test
+    public void submitC7ResponseForActiveRespondentWelshTest() throws Exception {
+        GeneratedDocumentInfo generatedDocumentInfo = GeneratedDocumentInfo.builder()
+            .url("TestUrl")
+            .binaryUrl("binaryUrl")
+            .hashToken("testHashToken")
+            .build();
+
+        Document document = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("c100RespC8Template")
+            .build();
+
+        when(documentGenService.generateSingleDocument(
+            Mockito.anyString(),
+            Mockito.any(CaseData.class),
+            Mockito.anyString(),
+            Mockito.anyBoolean(),
+            Mockito.any(HashMap.class)
+        )).thenReturn(document);
+
+        Document document2 = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("solicitorC1AFinalTemplate")
+            .documentCreatedOn(new Date())
+            .build();
+
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
+        when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
+
+        when(documentGenService.generateSingleDocument(
+            Mockito.anyString(),
+            Mockito.any(CaseData.class),
+            Mockito.anyString(),
+            Mockito.anyBoolean(),
+            Mockito.any(HashMap.class)
+        )).thenReturn(document2);
+        UserDetails userDetails = UserDetails.builder().forename("test")
+            .roles(List.of("caseworker-privatelaw-solicitor")).build();
+
+        when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
+
+        callbackRequest.setEventId("c100ResSolConsentingToApplicationA");
+
+        Map<String, Object> response = respondentSolicitorService.submitC7ResponseForActiveRespondent(
+            authToken, callbackRequest
+        );
+        Assertions.assertTrue(response.containsKey("respondentAc8"));
+    }
 
     @Test
     public void submitC7ResponseForActiveRespondentTestB() throws Exception {
@@ -1055,6 +1205,9 @@ public class C100RespondentSolicitorServiceTest {
 
             when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
 
+            DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+            when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
+
             CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                     .CallbackRequest.builder()
                     .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
@@ -1062,13 +1215,14 @@ public class C100RespondentSolicitorServiceTest {
                             .data(stringObjectMap)
                             .build())
                     .build();
+
             String event = eventsAndResp.split(HYPHEN_SEPARATOR)[0];
 
             callbackRequest.setEventId(event);
             when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(false);
 
             UserDetails userDetails = UserDetails.builder().forename("test")
-                    .roles(Arrays.asList("caseworker-privatelaw-solicitor")).build();
+                    .roles(List.of("caseworker-privatelaw-solicitor")).build();
             String respondent = eventsAndResp.split(HYPHEN_SEPARATOR)[1];
             when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
             Map<String, Object> response = respondentSolicitorService.submitC7ResponseForActiveRespondent(
@@ -1099,6 +1253,9 @@ public class C100RespondentSolicitorServiceTest {
                 ).build())
                 .build();
 
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+        when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
+
         when(documentGenService.generateSingleDocument(
                 Mockito.anyString(),
                 Mockito.any(CaseData.class),
@@ -1110,11 +1267,14 @@ public class C100RespondentSolicitorServiceTest {
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         UserDetails userDetails = UserDetails.builder().forename("test")
-                .roles(Arrays.asList("caseworker-privatelaw-solicitor")).build();
+                .roles(List.of("caseworker-privatelaw-solicitor")).build();
 
         when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
         callbackRequest.setEventId("c100ResSolConsentingToApplicationE");
-        List<String> errorList = new ArrayList<>();
+        when(documentLanguageService.docGenerateLang(
+            Mockito.any(CaseData.class)
+        )).thenReturn(documentLanguage);
+
         Map<String, Object> response = respondentSolicitorService.submitC7ResponseForActiveRespondent(
                 authToken, callbackRequest
         );
@@ -1122,9 +1282,9 @@ public class C100RespondentSolicitorServiceTest {
     }
 
     @Test
-    public void populateAboutToSubmitCaseDataForC100ResSolKeepDetailsPrivateATest() throws Exception {
+    public void populateAboutToSubmitCaseDataForC100ResSolKeepDetailsPrivateATest() {
 
-        when(responseSubmitChecker.isFinished(respondent3)).thenReturn(mandatoryFinished);
+        when(responseSubmitChecker.isFinished(respondent3, true)).thenReturn(mandatoryFinished);
         when(objectMapper.convertValue(Mockito.<RespondentAllegationsOfHarmData>any(),
                 Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
 
@@ -1147,9 +1307,9 @@ public class C100RespondentSolicitorServiceTest {
     }
 
     @Test
-    public void populateAboutToSubmitCaseDataForC100ResSolCurrentOrPreviousProceedingsAWhileExistingProceedingNoTest() throws Exception {
+    public void populateAboutToSubmitCaseDataForC100ResSolCurrentOrPreviousProceedingsAWhileExistingProceedingNoTest() {
 
-        when(responseSubmitChecker.isFinished(respondent3)).thenReturn(mandatoryFinished);
+        when(responseSubmitChecker.isFinished(respondent3, true)).thenReturn(mandatoryFinished);
         when(objectMapper.convertValue(Mockito.<RespondentAllegationsOfHarmData>any(),
                 Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
 
@@ -1198,6 +1358,7 @@ public class C100RespondentSolicitorServiceTest {
                         .c7ResponseSubmitted(No)
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
+                            .permissionFromCourt(No)
                                 .noConsentReason("test")
                                 .build())
                         .keepDetailsPrivate(KeepDetailsPrivate
@@ -1257,6 +1418,7 @@ public class C100RespondentSolicitorServiceTest {
                                 .build())
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
+                            .permissionFromCourt(No)
                                 .noConsentReason("test")
                                 .build())
                         .c7ResponseSubmitted(No)
@@ -1303,12 +1465,6 @@ public class C100RespondentSolicitorServiceTest {
         List<PartyEnum> party = new ArrayList<>();
         party.add(PartyEnum.respondent);
 
-        List<CaseUser> caseUserList = new ArrayList<>();
-        caseUserList.add(CaseUser.builder()
-                .caseId("12345")
-                .caseRole("[C100RESPONDENTSOLICITOR1]")
-                .userId("1afdfa01-8280-4e2c-b810-ab7cf741988a").build());
-
         Address address = Address.builder()
                 .addressLine1("test")
                 .postCode("test")
@@ -1320,8 +1476,6 @@ public class C100RespondentSolicitorServiceTest {
                 .build();
         Element<RespondentInterpreterNeeds> wrappedInterpreter = Element.<RespondentInterpreterNeeds>builder()
                 .value(interpreterNeeds).build();
-        DynamicListElement dynamicListElement = DynamicListElement
-                .builder().code("1afdfa01-8280-4e2c-b810-ab7cf741988a").build();
         Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
                 .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
                 .value(respondent).build();
@@ -1338,10 +1492,6 @@ public class C100RespondentSolicitorServiceTest {
         List<Element<RespondentInterpreterNeeds>> interpreterList = Collections.singletonList(wrappedInterpreter);
         Element<Address> wrappedAddress = Element.<Address>builder().value(address).build();
         List<Element<Address>> addressList = Collections.singletonList(wrappedAddress);
-        RespondentDocs respondentDocs = RespondentDocs.builder().build();
-        Element<RespondentDocs> respondentDocsElement = Element.<RespondentDocs>builder().value(respondentDocs).build();
-        List<Element<RespondentDocs>> respondentDocsList = new ArrayList<>();
-        respondentDocsList.add(respondentDocsElement);
         caseData = CaseData.builder().respondents(respondentList).id(1)
                 .caseTypeOfApplication(C100_CASE_TYPE)
                 .respondentSolicitorData(RespondentSolicitorData.builder()
@@ -1430,7 +1580,7 @@ public class C100RespondentSolicitorServiceTest {
                 Organisations.builder().contactInformation(List.of(ContactInformation.builder().build())).build());
         when(systemUserService.getSysUserToken()).thenReturn("");
 
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(mandatoryFinished);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(mandatoryFinished);
         when(objectMapper.convertValue(Mockito.<RespondentAllegationsOfHarmData>any(),
                 Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
 
@@ -1449,7 +1599,7 @@ public class C100RespondentSolicitorServiceTest {
 
 
     @Test
-    public void populateAboutToSubmitCaseDataForC100RMiamWithAttendMiamYesOrNoTest() throws Exception {
+    public void populateAboutToSubmitCaseDataForC100RMiamWithAttendMiamYesOrNoTest() {
 
         YesOrNo[] attendMiam = {Yes, No};
         for (YesOrNo yesOrNo : attendMiam) {
@@ -1461,12 +1611,6 @@ public class C100RespondentSolicitorServiceTest {
                     .response(Response.builder().build())
                     .build();
 
-            List<CaseUser> caseUserList = new ArrayList<>();
-            caseUserList.add(CaseUser.builder()
-                    .caseId("12345")
-                    .caseRole("[C100RESPONDENTSOLICITOR1]")
-                    .userId("1afdfa01-8280-4e2c-b810-ab7cf741988a").build());
-
             Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
                     .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
                     .value(respondent).build();
@@ -1476,10 +1620,6 @@ public class C100RespondentSolicitorServiceTest {
             List<Element<PartyDetails>> respondentList = new ArrayList<>();
             respondentList.add(wrappedRespondents);
             respondentList.add(wrappedRespondents2);
-            RespondentDocs respondentDocs = RespondentDocs.builder().build();
-            Element<RespondentDocs> respondentDocsElement = Element.<RespondentDocs>builder().value(respondentDocs).build();
-            List<Element<RespondentDocs>> respondentDocsList = new ArrayList<>();
-            respondentDocsList.add(respondentDocsElement);
             CaseData caseData1 = CaseData.builder().respondents(respondentList).id(1)
                     .caseTypeOfApplication(C100_CASE_TYPE)
                     .respondents(respondentList)
@@ -1541,7 +1681,7 @@ public class C100RespondentSolicitorServiceTest {
                         .build())
                 .build();
 
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(mandatoryFinished);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(mandatoryFinished);
 
         Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
                 .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
@@ -1656,6 +1796,8 @@ public class C100RespondentSolicitorServiceTest {
                 false
         )).thenReturn(document);
 
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+        when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
 
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                 .CallbackRequest.builder()
@@ -1675,7 +1817,7 @@ public class C100RespondentSolicitorServiceTest {
         stringObjectMap = caseData.toMap(new ObjectMapper());
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(true);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(true);
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
                 .url("TestUrl")
                 .binaryUrl("binaryUrl")
@@ -1728,6 +1870,13 @@ public class C100RespondentSolicitorServiceTest {
                 .documentFileName("Draft_C7_response.pdf")
                 .build();
 
+
+        caseData = caseData.toBuilder()
+                .respondentSolicitorData((RespondentSolicitorData.builder()
+                        .resSolConfirmEditContactDetails(CitizenDetails.builder().contact(Contact.builder().build()).build())
+                        .respondentAllegationsOfHarmData(allegationsOfHarmData).build()))
+                .build();
+
         Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
@@ -1737,16 +1886,7 @@ public class C100RespondentSolicitorServiceTest {
                 SOLICITOR_C7_DRAFT_DOCUMENT,
                 false
         )).thenReturn(document);
-
-        caseData = caseData.toBuilder()
-                .respondentSolicitorData((RespondentSolicitorData.builder()
-                        .respondentAllegationsOfHarmData(allegationsOfHarmData).build()))
-                .build();
-
-        stringObjectMap = caseData.toMap(new ObjectMapper());
-
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(true);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(true);
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
                 .url("TestUrl")
                 .binaryUrl("binaryUrl")
@@ -1764,6 +1904,9 @@ public class C100RespondentSolicitorServiceTest {
                 SOLICITOR_C1A_DRAFT_DOCUMENT,
                 false
         )).thenReturn(document);
+
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(false).build();
+        when(documentLanguageService.docGenerateLang(caseData)).thenReturn(documentLanguage);
 
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                 .CallbackRequest.builder()
@@ -1826,7 +1969,7 @@ public class C100RespondentSolicitorServiceTest {
         stringObjectMap = caseData.toMap(new ObjectMapper());
 
 
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(true);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(true);
         generatedDocumentInfo = GeneratedDocumentInfo.builder()
                 .url("TestUrl")
                 .binaryUrl("binaryUrl")
@@ -1866,7 +2009,7 @@ public class C100RespondentSolicitorServiceTest {
                 .eventId("c100ResSolViewResponseDraftDocumentB")
                 .build();
 
-        return respondentSolicitorService.populateDataMap(callbackRequest, null);
+        return respondentSolicitorService.populateDataMap(callbackRequest, null, SOLICITOR);
 
 
     }
@@ -1878,7 +2021,7 @@ public class C100RespondentSolicitorServiceTest {
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
 
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(true);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(true);
         when(organisationService.getOrganisationDetails(Mockito.anyString(), Mockito.anyString())).thenThrow(new RuntimeException());
 
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData2);
@@ -1937,11 +2080,9 @@ public class C100RespondentSolicitorServiceTest {
                         .build())
                 .eventId("")
                 .build();
-        assertExpectedException(() -> {
-            respondentSolicitorService.getSolicitorRole(
-                    callbackRequest
-            );
-        }, RespondentSolicitorException.class, TECH_ERROR);
+        assertExpectedException(() -> respondentSolicitorService.getSolicitorRole(
+                callbackRequest
+        ), RespondentSolicitorException.class, TECH_ERROR);
     }
 
     @Test
@@ -1958,14 +2099,12 @@ public class C100RespondentSolicitorServiceTest {
                 .build();
 
         stringObjectMap = caseData.toMap(new ObjectMapper());
-        when(responseSubmitChecker.isFinished(respondent)).thenReturn(true);
+        when(responseSubmitChecker.isFinished(respondent, true)).thenReturn(true);
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
 
-        assertExpectedException(() -> {
-            respondentSolicitorService.findSolicitorRepresentedRespondents(
-                    callbackRequest,SolicitorRole.C100APPLICANTSOLICITOR1
-            );
-        }, RespondentSolicitorException.class, RESPONSE_ALREADY_SUBMITTED_ERROR);
+        assertExpectedException(() -> respondentSolicitorService.findSolicitorRepresentedRespondents(
+                callbackRequest,SolicitorRole.C100APPLICANTSOLICITOR1
+        ), RespondentSolicitorException.class, RESPONSE_ALREADY_SUBMITTED_ERROR);
     }
 
     @Test
@@ -1976,7 +2115,6 @@ public class C100RespondentSolicitorServiceTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(objectMapper.convertValue(Mockito.<RespondentAllegationsOfHarmData>any(),
                 Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
-        List<String> errorList = new ArrayList<>();
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
                 .CallbackRequest.builder()
                 .eventId("c100ResSolResponseToAllegationsOfHarmA")
@@ -2013,7 +2151,6 @@ public class C100RespondentSolicitorServiceTest {
         when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
         when(objectMapper.convertValue(Mockito.<RespondentAllegationsOfHarmData>any(),
                                        Mockito.<TypeReference<Map<String, Object>>>any())).thenReturn(allegationsOfHarmDataMap);
-        List<String> errorList = new ArrayList<>();
         CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
             .CallbackRequest.builder()
             .eventId("c100ResSolResponseToAllegationsOfHarmA")
@@ -2051,13 +2188,17 @@ public class C100RespondentSolicitorServiceTest {
                 .sendSignUpLink("test")
                 .phoneNumber("1234567890")
                 .response(Response.builder()
+                    .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
                         .citizenDetails(CitizenDetails.builder()
                                 .firstName("test")
                                 .lastName("test")
+                                .address(Address.builder().postCode("MK8 1DY").build())
+                                .contact(Contact.builder().phoneNumber("123").build())
                                 .build())
                         .consent(Consent.builder()
                                 .consentToTheApplication(No)
                                 .noConsentReason("test")
+                                .permissionFromCourt(Yes)
                                 .build())
                         .c7ResponseSubmitted(No)
                         .keepDetailsPrivate(KeepDetailsPrivate
@@ -2084,6 +2225,8 @@ public class C100RespondentSolicitorServiceTest {
                                 .reasonableAdjustments(List.of(ReasonableAdjustmentsEnum.nosupport)).build())
                         .build())
                 .canYouProvideEmailAddress(Yes)
+                .canYouProvidePhoneNumber(Yes)
+                .isCurrentAddressKnown(Yes)
                 .isEmailAddressConfidential(Yes)
                 .isPhoneNumberConfidential(Yes)
                 .isAddressConfidential(Yes)
@@ -2098,6 +2241,470 @@ public class C100RespondentSolicitorServiceTest {
         Element<PartyDetails> wrappedRespondents2 = Element.<PartyDetails>builder()
                 .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
                 .value(respondent2).build();
-        assertNotNull(respondentSolicitorService.populateDataMap(callbackRequest1, wrappedRespondents2));
+        assertNotNull(respondentSolicitorService.populateDataMap(callbackRequest1, wrappedRespondents2, SOLICITOR));
+    }
+
+    @Test
+    public void testC1ADocumentQuarantine() throws Exception {
+        quarantineLegalDoc = quarantineLegalDoc.toBuilder()
+            .document(document)
+            .restrictedDetails("test details")
+            .uploaderRole(LEGAL_PROFESSIONAL)
+            .build();
+
+        when(documentGenService.generateSingleDocument(
+            Mockito.anyString(),
+            Mockito.any(CaseData.class),
+            Mockito.anyString(),
+            Mockito.anyBoolean(),
+            Mockito.any(HashMap.class)
+        )).thenReturn(document);
+
+
+        String[] events = {"c100ResSolAllegationsOfHarmA", "c100ResSolAllegationsOfHarmB",
+            "c100ResSolAllegationsOfHarmC", "c100ResSolAllegationsOfHarmD"};
+
+        for (String event : events) {
+
+            Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
+                .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+                .value(respondent).build();
+            Element<PartyDetails> wrappedRespondents2 = Element.<PartyDetails>builder()
+                .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+                .value(respondent2).build();
+            List<Element<PartyDetails>> respondentList = new ArrayList<>();
+            respondentList.add(wrappedRespondents);
+            respondentList.add(wrappedRespondents2);
+            respondentList.add(wrappedRespondents);
+            respondentList.add(wrappedRespondents2);
+
+            CaseData caseData = CaseData.builder().respondents(respondentList).id(1)
+                .caseTypeOfApplication(C100_CASE_TYPE)
+                .documentManagementDetails(
+                    DocumentManagementDetails.builder()
+                        .tempQuarantineDocumentList(List.of(element(UUID.fromString("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355"),quarantineLegalDoc)))
+                        .build()
+                ).reviewDocuments(ReviewDocuments.builder()
+                                     .reviewDocsDynamicList(DynamicList.builder().value(
+                                         DynamicListElement.builder()
+                                             .code("33dff5a7-3b6f-45f1-b5e7-5f9be1ede355").build()
+                                     ).build()).build())
+                .respondentSolicitorData(RespondentSolicitorData.builder()
+                                             .respondentAllegationsOfHarmData(allegationsOfHarmData)
+                                             .build())
+                .build();
+
+            Map<String, Object> stringObjectMap = new HashMap<>();
+            reviewDocumentService.getReviewedDocumentDetailsNew(caseData, stringObjectMap);
+
+            when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
+
+            CallbackRequest callbackRequest = uk.gov.hmcts.reform.ccd.client.model
+                .CallbackRequest.builder()
+                .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                                 .id(123L)
+                                 .data(stringObjectMap)
+                                 .build())
+                .build();
+            callbackRequest.setEventId(event);
+
+
+            doCallRealMethod().when(manageDocumentsService).moveDocumentsToRespectiveCategoriesNew(any(), any(), any(), any(), any());
+            doCallRealMethod().when(manageDocumentsService).getRestrictedOrConfidentialKey(any());
+            doCallRealMethod().when(manageDocumentsService).getQuarantineDocumentForUploader(any(),any());
+            doCallRealMethod().when(manageDocumentsService).moveToConfidentialOrRestricted(any(),any(),any(),any());
+            doCallRealMethod().when(manageDocumentsService).moveDocumentsToQuarantineTab(any(),any(),any(),any());
+
+            RespChildAbuseBehaviour respChildAbuseBehaviour = RespChildAbuseBehaviour.builder().typeOfAbuse(
+                ChildAbuseEnum.emotionalAbuse.getDisplayedValue()).build();
+            List<Element<RespChildAbuseBehaviour>> childAbuseBehaviourList = new ArrayList<>();
+            childAbuseBehaviourList.add(element(respChildAbuseBehaviour));
+
+            when(respondentAllegationOfHarmService.updateChildAbusesForDocmosis(any())).thenReturn(childAbuseBehaviourList);
+            UserDetails userDetails = UserDetails.builder().forename("test")
+                .roles(List.of("caseworker-privatelaw-solicitor")).build();
+            when(userService.getUserDetails(any(String.class))).thenReturn(userDetails);
+            Map<String, Object> response = respondentSolicitorService.submitC7ResponseForActiveRespondent(
+                authToken, callbackRequest
+            );
+
+            List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsList
+                = (List<Element<QuarantineLegalDoc>>) response.get("legalProfQuarantineDocsList");
+            assertNotNull(legalProfQuarantineDocsList);
+            assertEquals(1,legalProfQuarantineDocsList.size());
+
+        }
+    }
+
+    @Test
+    public void testPopulateDataMapNoSolOrgForVersion() {
+        respondent2 = PartyDetails.builder()
+            .user(User.builder().build())
+            .representativeFirstName("Abc")
+            .representativeLastName("Xyz")
+            .gender(Gender.male)
+            .email("abc@xyz.com")
+            .sendSignUpLink("test")
+            .phoneNumber("1234567890")
+            .response(Response.builder()
+                          .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
+                          .citizenDetails(CitizenDetails.builder()
+                                              .firstName("test")
+                                              .lastName("test")
+                                              .build())
+                          .consent(Consent.builder()
+                                       .consentToTheApplication(No)
+                                       .noConsentReason("test")
+                                       .permissionFromCourt(Yes)
+                                       .build())
+                          .c7ResponseSubmitted(No)
+                          .keepDetailsPrivate(KeepDetailsPrivate
+                                                  .builder()
+                                                  .otherPeopleKnowYourContactDetails(YesNoIDontKnow.yes)
+                                                  .confidentiality(Yes)
+                                                  .build())
+                          .miam(Miam.builder().attendedMiam(No)
+                                    .willingToAttendMiam(No)
+                                    .reasonNotAttendingMiam("test").build())
+                          .citizenInternationalElements(CitizenInternationalElements
+                                                            .builder()
+                                                            .childrenLiveOutsideOfEnWl(Yes)
+                                                            .childrenLiveOutsideOfEnWlDetails("Test")
+                                                            .parentsAnyOneLiveOutsideEnWl(Yes)
+                                                            .parentsAnyOneLiveOutsideEnWlDetails("Test")
+                                                            .anotherPersonOrderOutsideEnWl(Yes)
+                                                            .anotherPersonOrderOutsideEnWlDetails("test")
+                                                            .anotherCountryAskedInformation(Yes)
+                                                            .anotherCountryAskedInformationDetaails("test")
+                                                            .build())
+                          .respondentAllegationsOfHarmData(allegationsOfHarmData)
+                          .supportYouNeed(ReasonableAdjustmentsSupport.builder()
+                                              .reasonableAdjustments(List.of(ReasonableAdjustmentsEnum.nosupport)).build())
+                          .build())
+            .canYouProvideEmailAddress(Yes)
+            .canYouProvidePhoneNumber(Yes)
+            .isCurrentAddressKnown(Yes)
+            .isEmailAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isAddressConfidential(Yes)
+            .solicitorOrg(Organisation.builder().build())
+            .solicitorAddress(Address.builder().addressLine1("ABC").addressLine2("test").addressLine3("test").postCode(
+                "AB1 2MN").build())
+            .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+            .solicitorReference("test")
+            .address(Address.builder().addressLine1("").build())
+            .build();
+
+        Element<PartyDetails> wrappedRespondents2 = Element.<PartyDetails>builder()
+            .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+            .value(respondent2).build();
+        assertNotNull(respondentSolicitorService.populateDataMap(callbackRequest, wrappedRespondents2, SOLICITOR));
+    }
+
+    @Test
+    public void testPopulateDataMapOriginatedFromCitizen() {
+        respondent2 = PartyDetails.builder()
+            .user(User.builder().build())
+            .representativeFirstName("Abc")
+            .representativeLastName("Xyz")
+            .gender(Gender.male)
+            .email("abc@xyz.com")
+            .sendSignUpLink("test")
+            .phoneNumber("1234567890")
+            .response(Response.builder()
+                          .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
+                          .citizenDetails(CitizenDetails.builder()
+                                              .firstName("test")
+                                              .lastName("test")
+                                              .build())
+                          .consent(Consent.builder()
+                                       .consentToTheApplication(No)
+                                       .noConsentReason("test")
+                                       .permissionFromCourt(Yes)
+                                       .build())
+                          .c7ResponseSubmitted(No)
+                          .keepDetailsPrivate(KeepDetailsPrivate
+                                                  .builder()
+                                                  .confidentialityList(new ArrayList<>())
+                                                  .otherPeopleKnowYourContactDetails(YesNoIDontKnow.yes)
+                                                  .confidentiality(Yes)
+                                                  .build())
+                          .miam(Miam.builder().attendedMiam(No)
+                                    .willingToAttendMiam(No)
+                                    .reasonNotAttendingMiam("test").build())
+                          .citizenInternationalElements(CitizenInternationalElements
+                                                            .builder()
+                                                            .childrenLiveOutsideOfEnWl(Yes)
+                                                            .childrenLiveOutsideOfEnWlDetails("Test")
+                                                            .parentsAnyOneLiveOutsideEnWl(Yes)
+                                                            .parentsAnyOneLiveOutsideEnWlDetails("Test")
+                                                            .anotherPersonOrderOutsideEnWl(Yes)
+                                                            .anotherPersonOrderOutsideEnWlDetails("test")
+                                                            .anotherCountryAskedInformation(Yes)
+                                                            .anotherCountryAskedInformationDetaails("test")
+                                                            .build())
+                          .respondentAllegationsOfHarmData(allegationsOfHarmData)
+                          .supportYouNeed(ReasonableAdjustmentsSupport.builder()
+                                              .reasonableAdjustments(List.of(ReasonableAdjustmentsEnum.nosupport)).build())
+                          .build())
+            .canYouProvideEmailAddress(Yes)
+            .isEmailAddressConfidential(Yes)
+            .isPhoneNumberConfidential(Yes)
+            .isAddressConfidential(No)
+            .solicitorOrg(Organisation.builder().build())
+            .solicitorAddress(Address.builder().addressLine1("ABC").addressLine2("test").addressLine3("test").postCode(
+                "AB1 2MN").build())
+            .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+            .solicitorReference("test")
+            .address(Address.builder().addressLine1("").build())
+            .build();
+
+        Element<PartyDetails> wrappedRespondents2 = Element.<PartyDetails>builder()
+            .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+            .value(respondent2).build();
+        assertNotNull(respondentSolicitorService.populateDataMap(callbackRequest, wrappedRespondents2, CITIZEN));
+    }
+
+    @Test
+    public void testPopulateDataMapForRaCitizen() {
+        CurrentOrPreviousProceedings currentOrPreviousProceedings = CurrentOrPreviousProceedings.builder()
+            .courtOrderMadeForProtection(Yes)
+            .haveChildrenBeenInvolvedInCourtCase(Yes)
+            .proceedingsList(new ArrayList<>())
+            .build();
+        respondent2 = PartyDetails.builder()
+            .user(User.builder().build())
+            .representativeFirstName("Abc")
+            .representativeLastName("Xyz")
+            .gender(Gender.male)
+            .email("abc@xyz.com")
+            .sendSignUpLink("test")
+            .phoneNumber("1234567890")
+            .response(Response.builder()
+                          .currentOrPastProceedingsForChildren(YesNoDontKnow.yes)
+                          .citizenDetails(CitizenDetails.builder()
+                                              .firstName("test")
+                                              .lastName("test")
+                                              .dateOfBirth(LocalDate.now())
+                                              .build())
+                          .consent(Consent.builder()
+                                       .consentToTheApplication(No)
+                                       .noConsentReason("test")
+                                       .permissionFromCourt(Yes)
+                                       .build())
+                          .c7ResponseSubmitted(No)
+                          .keepDetailsPrivate(KeepDetailsPrivate
+                                                  .builder()
+                                                  .confidentialityList(new ArrayList<>())
+                                                  .otherPeopleKnowYourContactDetails(YesNoIDontKnow.yes)
+                                                  .confidentiality(Yes)
+                                                  .build())
+                          .miam(Miam.builder().attendedMiam(No)
+                                    .willingToAttendMiam(No)
+                                    .reasonNotAttendingMiam("test").build())
+                          .citizenInternationalElements(CitizenInternationalElements
+                                                            .builder()
+                                                            .childrenLiveOutsideOfEnWl(Yes)
+                                                            .childrenLiveOutsideOfEnWlDetails("Test")
+                                                            .parentsAnyOneLiveOutsideEnWl(Yes)
+                                                            .parentsAnyOneLiveOutsideEnWlDetails("Test")
+                                                            .anotherPersonOrderOutsideEnWl(Yes)
+                                                            .anotherPersonOrderOutsideEnWlDetails("test")
+                                                            .anotherCountryAskedInformation(Yes)
+                                                            .anotherCountryAskedInformationDetaails("test")
+                                                            .build())
+                          .currentOrPreviousProceedings(currentOrPreviousProceedings)
+                          .respondentAllegationsOfHarmData(allegationsOfHarmData)
+                          .supportYouNeed(ReasonableAdjustmentsSupport.builder()
+                                              .reasonableAdjustments(Arrays.asList(
+                                                  ReasonableAdjustmentsEnum.docsformat,
+                                                  ReasonableAdjustmentsEnum.commhelp,
+                                                  ReasonableAdjustmentsEnum.travellinghelp,
+                                                  ReasonableAdjustmentsEnum.hearingsupport,
+                                                  ReasonableAdjustmentsEnum.hearingcomfort
+                                              ))
+                                              .docsSupport(Arrays.asList(
+                                                  DocsSupportEnum.docsReadOut,
+                                                  DocsSupportEnum.docsprint,
+                                                  DocsSupportEnum.largeprintdocs,
+                                                  DocsSupportEnum.other,
+                                                  DocsSupportEnum.brailledocs
+                                              ))
+                                              .helpCommunication(Arrays.asList(
+                                                  HelpCommunicationEnum.signlanguage,
+                                                  HelpCommunicationEnum.courthearing,
+                                                  HelpCommunicationEnum.courtvisit,
+                                                  HelpCommunicationEnum.other
+                                              ))
+                                              .courtHearing(Arrays.asList(
+                                                  CourtHearingEnum.animal,
+                                                  CourtHearingEnum.supportworker,
+                                                  CourtHearingEnum.familymember,
+                                                  CourtHearingEnum.other,
+                                                  CourtHearingEnum.assistance
+                                              ))
+                                              .courtComfort(Arrays.asList(
+                                                  CourtComfortEnum.appropriatelighting,
+                                                  CourtComfortEnum.breaks,
+                                                  CourtComfortEnum.other
+                                              ))
+                                              .travellingToCourt(Arrays.asList(
+                                                  TravellingToCourtEnum.building,
+                                                  TravellingToCourtEnum.differentchair,
+                                                  TravellingToCourtEnum.parkingspace,
+                                                  TravellingToCourtEnum.other
+                                              ))
+                                              .docsDetails("test docs")
+                                              .largePrintDetails("test large print details")
+                                              .otherDetails("test other details")
+                                              .safetyArrangements(Arrays.asList(
+                                                  SafetyArrangementsEnum.advancedview,
+                                                  SafetyArrangementsEnum.videolinks
+                                              ))
+                                              .attendingToCourt(List.of(
+                                                  AttendingToCourtEnum.videohearings,
+                                                  AttendingToCourtEnum.phonehearings
+                                              ))
+                                              .languageRequirements(List.of(
+                                                  LanguageRequirementsEnum.speakwelsh,
+                                                  LanguageRequirementsEnum.readandwritewelsh
+                                              ))
+                                              .safetyArrangementsDetails("test")
+                                              .build())
+                          .build())
+            .canYouProvideEmailAddress(Yes)
+            .email("test@test.test")
+            .isEmailAddressConfidential(Yes)
+            .addressLivedLessThan5YearsDetails("test address history")
+            .isPhoneNumberConfidential(Yes)
+            .isAddressConfidential(No)
+            .solicitorOrg(Organisation.builder().build())
+            .solicitorAddress(Address.builder().addressLine1("ABC").addressLine2("test").addressLine3("test").postCode(
+                "AB1 2MN").build())
+            .doTheyHaveLegalRepresentation(YesNoDontKnow.yes)
+            .solicitorReference("test")
+            .address(Address.builder().addressLine1("").build())
+            .build();
+
+        Element<PartyDetails> wrappedRespondents2 = Element.<PartyDetails>builder()
+            .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+            .value(respondent2).build();
+        assertNotNull(respondentSolicitorService.populateDataMap(callbackRequest, wrappedRespondents2, CITIZEN));
+    }
+
+    @Test
+    public void populateAboutToSubmitCaseDataWithAoHOrders() {
+        GeneratedDocumentInfo generatedDocumentInfo = GeneratedDocumentInfo.builder()
+            .url("TestUrl")
+            .binaryUrl("binaryUrl")
+            .hashToken("testHashToken")
+            .build();
+
+        Document undertakingDocument = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("undertakingDocument.pdf")
+            .documentCreatedOn(new Date())
+            .build();
+
+        Document fmpDocument = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("fmpDoc.pdf")
+            .documentCreatedOn(new Date())
+            .build();
+
+        Document nmDocument = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("nmDocument.pdf")
+            .documentCreatedOn(new Date())
+            .build();
+        Document occupationalDocument = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("occupationalDocument.pdf")
+            .documentCreatedOn(new Date())
+            .build();
+        Document injunctionDocument = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("injunctionDocument.pdf")
+            .documentCreatedOn(new Date())
+            .build();
+        Document restrainingDocument = Document.builder()
+            .documentUrl(generatedDocumentInfo.getUrl())
+            .documentBinaryUrl(generatedDocumentInfo.getBinaryUrl())
+            .documentHash(generatedDocumentInfo.getHashToken())
+            .documentFileName("restrainingDocument.pdf")
+            .documentCreatedOn(new Date())
+            .build();
+
+        allegationsOfHarmData = RespondentAllegationsOfHarmData.builder()
+            .respOrdersUndertakingInPlaceDocument(undertakingDocument)
+            .respOrdersForcedMarriageProtectionDocument(fmpDocument)
+            .respOrdersNonMolestationDocument(nmDocument)
+            .respOrdersOccupationDocument(occupationalDocument)
+            .respOrdersOtherInjunctiveDocument(injunctionDocument)
+            .respOrdersRestrainingDocument(restrainingDocument)
+            .build();
+
+        respondent = PartyDetails.builder()
+            .response(Response.builder()
+                          .respondentAllegationsOfHarmData(allegationsOfHarmData)
+
+                          .build())
+            .build();
+
+        Element<PartyDetails> wrappedRespondents = Element.<PartyDetails>builder()
+            .id(UUID.fromString("1afdfa01-8280-4e2c-b810-ab7cf741988a"))
+            .value(respondent).build();
+        List<Element<PartyDetails>> respondentList = new ArrayList<>();
+        respondentList.add(wrappedRespondents);
+        caseData = CaseData.builder().respondents(respondentList).id(1)
+            .caseTypeOfApplication(C100_CASE_TYPE)
+            .respondentSolicitorData(RespondentSolicitorData.builder()
+                                         .respondentAllegationsOfHarmData(allegationsOfHarmData)
+                                         .respondentNameForResponse("Test respondent")
+                                         .build())
+            .build();
+
+        stringObjectMap = caseData.toMap(new ObjectMapper());
+
+        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
+
+        callbackRequest = uk.gov.hmcts.reform.ccd.client.model
+            .CallbackRequest.builder()
+            .caseDetails(uk.gov.hmcts.reform.ccd.client.model.CaseDetails.builder()
+                             .id(123L)
+                             .data(stringObjectMap)
+                             .build())
+            .eventId("SolicitorA")
+            .build();
+        when(confidentialDetailsMapper.mapConfidentialData(
+            Mockito.any(CaseData.class),
+            Mockito.anyBoolean()
+        )).thenReturn(caseData);
+        when(applicationsTabService.getRespondentsTable(caseData)).thenReturn(List.of(Element.<Respondent>builder().build()));
+        when(organisationService.getOrganisationDetails(Mockito.anyString(), Mockito.anyString())).thenReturn(
+            Organisations.builder().contactInformation(List.of(ContactInformation.builder().build())).build());
+        when(systemUserService.getSysUserToken()).thenReturn("");
+
+        when(objectMapper.convertValue(
+            Mockito.<RespondentAllegationsOfHarmData>any(),
+            Mockito.<TypeReference<Map<String, Object>>>any()
+        )).thenReturn(allegationsOfHarmDataMap);
+
+        respondentSolicitorService.buildAoHResponse(
+            caseData,
+            Response.builder().build(),
+            "Test Solicitor"
+        );
+        assertEquals(6, caseData.getRespondentDocsList().size());
     }
 }
